[project]
name = "nisanyan-cli"
version = "0.4.5"
description = "CLI tool for Turkish etymological dictionary, nisanyansozluk.com (nis <word>)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Gökçe", email = "agmmnn@gmail.com" }
]
keywords = ["synonym", "antonym", "thesaurus", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.6.0",
    "importlib-metadata>=6.8.0",
]

[project.urls]
Homepage = "https://github.com/agmmnn/nisanyan-cli"
Repository = "https://github.com/agmmnn/nisanyan-cli"
Changelog = "https://github.com/agmmnn/nisanyan-cli/releases"
"Bug Tracker" = "https://github.com/agmmnn/nisanyan-cli/issues"

[project.scripts]
nis = "nisanyan_cli.__main__:cli"

[dependency-groups]
dev = [
    "black",
]

[tool.hatch.build.targets.wheel]
packages = ["nisanyan_cli"]

[tool.black]
includes = "nisanyan_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
